# python-requirements-and-testing

./: DEPLOYMENT.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  requirements_to_test_gui.py  run_app.py  sample_generated_test.py  sample_requirements_checklist.txt  setup.py  test_runner_example.py  upload.sh
requirements_to_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build.sh  create_app_bundle.py  create_icon.py  readme_editor.py
src/requirements_to_test/: __init__.py  __main__.py  generator.py  gui.py  requirements_to_test_gui.py  run_app.py  runner.py
tests/: test_runner_example.py
